--- a/assets/style.css
+++ b/assets/style.css
@@ -71,7 +71,7 @@ body {
 }
 
 .search-bar button {
-  background-color: #74007f;
+  background-color: rgb(139,69,19);
   color: white;
   padding: 6px 15px;
   border: none;
@@ -117,33 +117,17 @@ body {
   display: inline-block;
   margin-top: 25px;
   padding: 10px 25px;
-  background-color: #74007f;
+  background-color: rgb(139,69,19);
   color: white;
   text-decoration: none;
   border-radius: 25px;
   font-weight: bold;
 }
 
-/* Social Icons */
-.social-icons {
-  position: absolute;
-  left: 30px;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.social-icons img {
-  width: 24px;
-  height: 24px;
-}
-
 /* about page*/
 .about-page {
   height: 100vh;
-  background: url('../assets/neko_world.jpeg') no-repeat center center/cover;
+  background: url('../assets/background.jpeg') no-repeat center center/cover;
   padding: 100px 40px 40px 40px;
   position: relative;
   color: white;
@@ -204,7 +188,7 @@ body {
 
 .title {
   display: inline-block;
-  background: #74007f;
+  background: rgb(139,69,19);
   padding: 6px 12px;
   border-radius: 20px;
   margin-top: 10px;
@@ -274,7 +258,7 @@ body {
 }
 
 .contact-form button:hover {
-  background-color: #74007f;
+  background-color: rgb(139,69,19);
 }
 #results {
   display: flex;
