--- a/assets/style.css
+++ b/assets/style.css
@@ -221,14 +221,20 @@ body {
   max-height: 600px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
+  margin-top: 10px;
   background-color: rgba(0, 0, 0, 0.5);
   padding: 30px;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 8px;
 }
+
+.check {
+    position: relative;
+    right: 250px;
+    top: 28px;
+  }
 
 .contact-form input,
 .contact-form textarea {
@@ -250,7 +256,7 @@ body {
   padding: 12px;
   border: none;
   border-radius: 30px;
-  background-color: #74007f;
+  background-color: rgb(139,69,19);
   color: white;
   font-size: 16px;
   cursor: pointer;
