--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0;
-  padding: 0;
+  width: 100%;
+  margin: auto;
   box-sizing: border-box;
   font-weight: bold;
   font-family: "Times New Roman", Times, serif;;
@@ -10,14 +10,13 @@
 body {
   color: white;
   margin: 0; 
-  height: 100%; 
-  overflow: hidden
+  height: 100%;
+  width: 100%;
 }
 
 /* Navigation bar */
 .navbar {
-  display: flex;
-  justify-content: space-between;
+  display: fixed;
   align-items: center;
   background: rgba(0, 0, 0, 0.7);
   padding: 10px 30px;
@@ -30,7 +29,7 @@ body {
 .logo {
     display: flex;
     align-items: center;
-  gap: 10px;
+    text-align: center;
 }
 
 .logo a{  
@@ -39,8 +38,9 @@ body {
   text-decoration: none;
   font-weight: 500;
   font-weight: bold;
+  align-items: center;
+  text-align: center;
   font-family: "Times New Roman", Times, serif;
-  white-space: pre
 }
 
 .logo img {
@@ -48,15 +48,16 @@ body {
 }
 
 .nav-links a {  
-  margin: 0 15px;
   color: white;
   text-decoration: none;
   font-weight: 500px;
+  display: block;
+  text-align: center;
+  padding-bottom: 1%;
 }
 
 .search-bar {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
   gap: 10px;
   white-space: pre
@@ -84,33 +85,41 @@ body {
   height: 100vh;
   display: flex;
   align-items: center;
-  padding: 300px 60px 10px 100px;
+  padding: 40% 10% 10% 5%;
   position: fixed;
+  z-index: index 9;
+  position: relative;
 }
 
 .story, .result{
     position:fixed; top:0; left:0
 }
-.story {z-index: index 9;
+.story {
+    z-index: index 9;
 }
 
-.result{z-index: 8;
+.result{
+    z-index: -1;
+    position: relative;
 }
 
 .story-content {
   max-width: 600px;
+  
 }
 
 .story-content h1 {
-  font-size: 60px;
-  font-weight: 700;
+  font-size: 50px;
+  font-weight: 400;
   line-height: 1.1;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .story-content p {
   margin-top: 20px;
   font-size: 16px;
   max-width: 480px;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .btn {
@@ -172,6 +181,15 @@ body {
   flex-wrap: wrap;
 }
 
+.team img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    z-index: index 1;
+    position: relative;
+}
 .team-member {
   background: rgba(0, 0, 0, 0.6);
   border-radius: 12px;
@@ -200,7 +218,7 @@ body {
 /* Contact page */
 .contact-page {
   height: 100vh;
-  background: url('../assets/neko_world.jpeg') no-repeat center center/cover;
+  background: url('../assets/background.jpeg') no-repeat center center/cover;
   padding: 100px 40px 40px 40px;
   position: relative;
   color: white;
@@ -232,8 +250,8 @@ body {
 
 .check {
     position: relative;
-    right: 250px;
-    top: 28px;
+    right:55%;
+    top:50px;
   }
 
 .contact-form input,
@@ -270,8 +288,9 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 25px;
-  margin-top: 50px;
+  margin-top: 50%;
   justify-content: center;
+  z-index: 1;
 }
 
 .card {
@@ -283,6 +302,8 @@ body {
   color: white;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
   text-align: center;
+  z-index: 1;
+  position: relative;
 }
 
 .card img {
@@ -291,6 +312,8 @@ body {
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 10px;
+  z-index: 1;
+  position: relative;
 }
 #results {
   display: flex;
@@ -298,4 +321,5 @@ body {
   justify-content: center;
   gap: 20px;
   padding: 20px;
+  z-index: 1;
 }
